<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/llBordeStyle">

    <LinearLayout
        android:id="@+id/llParejas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/llStyle"
        android:padding="0dp">

        <ImageView
            android:id="@+id/imgBrainParejas"
            android:layout_width="@dimen/imgPeque"
            android:layout_height="@dimen/imgPeque"
            android:src="@drawable/brain"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/llStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_couples"
                style="@style/tituloStyle"
                android:layout_margin="@dimen/borde"/>

            <Button
                android:id="@+id/btnParejasNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_couples_normal"
                style="@style/btnStyle"
                android:layout_margin="@dimen/borde"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/llStyle">
                <Spinner
                    android:id="@+id/spnTabla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/tables"/>

                <Button
                    android:id="@+id/btnParejasMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/match_couples_multiply"
                    style="@style/btnStyle"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>